--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,37 @@
 --White:#ffffff; 
 }
 
+h1, h2 {
+    font-family: 'Kavoon', cursive;
+    color: #ffffff;
+}
+
+h1{
+    font-size: 3em;
+}
+
+nav h2{
+    font-size: 1.5em;
+}
+
+h2{
+    font-size: 2em;
+}
+
+h3{
+    font-size: 1.5em;
+    color: #E9BB57;
+}
+
+h4{
+    font-size: 1.15em;
+    color: #484FB7;
+}
+
+body{
+    font-family: 'Inter', sans-serif;
+}
+
+html{
+    background-color: var(--Purple);
+}
