--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,18 @@
 --White:#ffffff; 
 }
 
-header p {
+header small {
+    display: block;
     background-color: #D9526F;
     margin: auto;
     margin-bottom: 10px;
     color: #ffffff;
     text-align: center;
     border-radius: 0px 0px 40px 40px;
-    width: 93%;
+    width: 90%;
     padding: 10px;
     padding-top: 20px;
+    z-index: -1;
 }
 
 h1, h2 {
@@ -30,12 +32,12 @@ h1, h2 {
 h1{
     font-size: 3em;
     background-color: #6B8FE7;
-    padding-top: 70px;
     padding-bottom: 25px;
     text-align: center;
     margin: 0;
-    border-radius: 0px 0px 40px 40px;
+    border-radius: 0px 0px 50px 50px;
     width: 100%;
+    letter-spacing: 3px;
 }
 
 nav h2{
@@ -44,14 +46,14 @@ nav h2{
 
 h2{
     font-size: 2em;
-    padding-left: 20px;
+    padding-left: 60px;
     padding-top: 20px;
 }
 
 h3{
     font-size: 1.5em;
     color: #E9BB57;
-    padding-left: 20px;
+    padding-left: 60px;
 }
 
 h4{
@@ -72,6 +74,11 @@ html{
     background-color: var(--Purple);
     margin: 0;
     padding: 0;
+}
+
+nav {
+    padding: 0;
+    margin: 0;
 }
 
 ul li {
@@ -111,7 +118,9 @@ img {
 article {
     background-color: #ffffff;
     border-radius: 25px;
-    margin: 25px;
+    margin: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 #price {
@@ -184,8 +193,8 @@ footer {
     background-color: #6B8FE7;
     text-align: center;
     color: #ffffff;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     border-radius: 0px 0px 50px 50px;
     width: 100%;
 }
@@ -194,20 +203,31 @@ footer {
     text-align: center;
     background-color: #D9526F;
     color: #ffffff;
-    padding-bottom: 90px;
+    padding-bottom: 70px;
 }
 
-.first p{
+.first p {
     text-align: left;
-    padding: 20px;
+    padding-left: 50px;
+    padding-top: 0px;
+    margin-bottom: 30px;
+}
+
+.first h2 {
+    text-align: left;
+    padding-bottom: 5px;
 }
 
 .first a{
     background-color: #ffffff;
     text-decoration: none;
-    margin: 10px;
+    margin-bottom: 10px;
     text-transform: uppercase;
+    font-weight: bold;
     text-align: center;
+    padding: 40px 190px 40px 190px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 5px #1E1E1E;
 }
 
 .potential {
