--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,14 @@ h3{
     color: #E9BB57;
     padding-left: 20px;
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 h4{
     padding-left: 25px;
     font-size: 1.15em;
     color: #484FB7;
+    margin-bottom: 0px;
     font-weight: bold;
 }
 
@@ -190,14 +192,14 @@ table {
 
 td {
     background-color: #ffffff;
-    padding: 20px;
-    font-size: 1.8em;
+    padding: 10px;
+    font-size: 1em;
 }
 
 th{
-    padding: 20px;
-    font-size: 2em;
-    text-transform: capitalize;
+    padding: 10px;
+    font-size: 1em;
+    text-transform: uppercase;
 }
 
 footer {
@@ -245,10 +247,12 @@ footer a {
     box-shadow: 10px 10px 5px #1E1E1E;
 }
 
-.potential {
-    display: none;
-}
 
-@media screen {min-width: 450px;
+
+@media screen and (min-width: 450px) {
+
+    .potential {
+    display: none;
+    }
 
 }
