@Start medium viewport
Show the full potential part

--- a/styles.css
+++ b/styles.css
@@ -256,3 +256,24 @@ footer a {
     }
 
 }
+
+@media screen and (min-width: 620px) {
+
+    .potential {
+        display: inline;
+        visibility: visible;
+    }
+
+    header small {
+        font-weight: normal;
+    }
+
+}
+
+@media screen and (min-width: 950px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+
+}
