--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ h2{
     padding-left: 20px;
     padding-top: 20px;
     margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 h3{
@@ -234,8 +235,8 @@ footer a {
     text-align: left;
     padding-bottom: 5px;
 }
-
-.first a{
+ 
+.first a {
     background-color: #ffffff;
     text-decoration: none;
     margin-bottom: 10px;
@@ -268,6 +269,98 @@ footer a {
         font-weight: normal;
     }
 
+    #personal-development {
+        width: 50%;
+        margin-right: 15px;
+        margin-bottom: 0px;
+    }
+
+    #career-coaching {
+        width: 50%;
+        margin-left: 15px;
+        margin-bottom: 0px;
+    }
+
+    #o-o {
+        display: flex;
+        justify-content: center;
+    }
+
+    #supportive-community {
+        width: 50%;
+        margin-right: 15px;
+        margin: 20px;
+    }
+
+    #focused-session {
+        width: 50%;
+        margin-left: 15px;
+        margin: 20px;
+    }
+
+    #g-c {
+        display: flex;
+        justify-content: center;
+    }
+
+    #whychoose {
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    #whychoose div {
+        scale: 110%;
+        margin-top: 15px;
+        margin-bottom: 0px;
+        margin: 10px;
+    }
+
+    #green, #yellow {
+        width: 30%;
+    }
+
+    #purple, #white {
+        width: 20%;
+    }
+    
+    #price {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-evenly;
+    }
+
+    table{
+        width: 330px;
+        margin: 15px;
+        max-width: max-content;
+        min-width: 330px;
+    }
+
+    th {
+        padding: 12px;
+    }
+
+    td {
+        padding: 12px;
+    }
+
+    .first {
+        display: grid;
+        grid-template-columns: auto auto;
+        padding-bottom: 0px;
+    }
+
+    .fisrt h2 {
+        grid-column: 1 / span 2;
+    }
+
+    .first a {
+        margin: auto;
+        position: relative;
+        bottom: -50px;
+    }
 }
 
 @media screen and (min-width: 950px) {
